--- a/robinson.tish/jquerymobile/app.css
+++ b/robinson.tish/jquerymobile/app.css
@@ -103,12 +103,33 @@ a:hover {
    padding:0;
 }
 
-
-
+  .input{
+    -webkit-writing-mode: horizontal-tb !important;
+    text-rendering: auto;
+    color: -internal-light-dark(black, white);
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: start;
+    appearance: textfield;
+    background-color: -internal-light-dark(rgb(255, 255, 255), rgb(59, 59, 59));
+    -webkit-rtl-ordering: logical;
+    cursor: text;
+    margin: 0em;
+    font: 400 13.3333px Arial;
+    padding: 1px 2px;
+    border-width: 2px;
+    border-style: inset;
+    border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
+    border-image: initial;
+  }
 
 .img
-width: 300px
-height:300px
+width: 350px
+height:350px
 
 
 /* FORM ELEMENTS */
@@ -116,12 +137,12 @@ height:300px
     margin: 1em 0;
 }
 .ui-mobile .form-label {
-    margin: 1em 0;
+    margin: 3em 0;
     font-size: 0.7em;
     color: var(--color-neutral-medium);
 }
 .form-input {
-    width: 100%;
+    width: 150%;
     display: inline-block;
     border: 1px solid #d83939;
     margin: 0;
