--- a/robinson.tish/jquerymobile/lib/css/app.css
+++ b/robinson.tish/jquerymobile/lib/css/app.css
@@ -103,35 +103,10 @@ a:hover {
    padding:0;
 }
 
-  .input{
-    -webkit-writing-mode: horizontal-tb !important;
-    text-rendering: auto;
-    color: -internal-light-dark(black, white);
-    letter-spacing: normal;
-    word-spacing: normal;
-    text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
-    display: inline-block;
-    text-align: start;
-    appearance: textfield;
-    background-color: -internal-light-dark(rgb(255, 255, 255), rgb(59, 59, 59));
-    -webkit-rtl-ordering: logical;
-    cursor: text;
-    margin: 0em;
-    font: 400 13.3333px Arial;
-    padding: 1px 2px;
-    border-width: 2px;
-    border-style: inset;
-    border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
-    border-image: initial;
-  }
 
-.img{
- width: 350px;
- height:350px;
- align-items: center;
-}
+
+
+
 
 
 /* FORM ELEMENTS */
@@ -139,7 +114,7 @@ a:hover {
     margin: 1em 0;
 }
 .ui-mobile .form-label {
-    margin: 3em 0;
+    margin: 1em 0;
     font-size: 0.7em;
     color: var(--color-neutral-medium);
 }
@@ -149,14 +124,14 @@ a:hover {
     border: 1px solid #d83939;
     margin: 0;
     padding: 0.5em 1em;
-    border-radius: 5em;
+    border-radius: 3em;
     outline: 0;
     font:inherit;
 }
 .form-button {
     margin: 0;
     padding: 0.5em 1em;
-    border-radius: 5em;
+    border-radius: 0.3em;
     border-width:0;
     background-color: #dc1717;
     outline: 0;
@@ -168,108 +143,5 @@ a:hover {
 }
 .form-button:hover {
    text-decoration:none;
-   background-color:#0a4349;
-
-}
-
-
-/* MODAL */
-.modal {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity:0;
-    pointer-events:none;
-    transition:all 0.3s;
-}
-.modal.active {
-  opacity:1;
-  pointer-events:initial;
-}
-
-
-.modal-back {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.8);
-}
-
-
-
-.modal-popup {
-  position: absolute;
-  width:80%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,calc(-50% + 5vh));
-  border-radius:5px;
-  overflow:hidden;
-  transition:all 0.3s;
-}
-.modal.active .modal-popup {
-  transform: translate(-50%,-50%);
-}
-
-
-
-
-.modal-drawer {
-  position:absolute;
-  display:flex;
-  flex-direction:column;
-  transition: all 0.3s;
-  box-shadow:0 0 5px rgba(0,0,0,0.3);
-}
-.modal-drawer.left,
-.modal-drawer.right {
-  height:100%;
-  width:70vw;
-}
-
-
-
-
-
-.modal-head,
-.modal-foot {
-  background-color:var(--color-neutral-light);
-  padding:0.5em 1em;
-}
-.modal-body {
-  background-color:var(--color-white);
-  flex: 1 1 100%;
-  padding:0.5em 1em;
-}
-
-
-
-
-
-
-/* ICONS */
-.icon svg,
-.icon img {
-  width:1em;
-  height:1em;
-  vertical-align: text-bottom;
-}
-
-
-
-
-/* FLOATERS */
-.floater { position:absolute; }
-.floater.right { right: 0; }
-.floater.left { left: 0; }
-.floater.top { top: 0; }
-.floater.bottom { bottom: 0; }
-
-.floater .icon {
-  padding:1em;
-  display:block;
+   background-color:var(--color-neutral-medium);
 }
