--- a/robinson.tish/css/app.css
+++ b/robinson.tish/css/app.css
@@ -1,23 +1,5 @@
 /* CSS RESET */
 
-.element.style {
-  border-radius:60%;
-  padding:1.7em;
-  width: 100vw;
-  height: 100vw;
-}
-
-element.style {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    background-color: rgb(229, 227, 223);
-}
-//*.element.style {
-  border-radius: 60%;
-}*//
 *, *::after, *::before {
    box-sizing:border-box;
 }
@@ -47,11 +29,7 @@ body {
    font-family:var(--font-sans);
 }
 
-h1{
-  background-color:#e88024;
-  font-size: 3em;
-  
-}
+h1,
 h2,
 h3,
 h4,
@@ -70,12 +48,7 @@ a:hover {
 }
 
 
-.img{
- border-radius: 50%;
- width: 85em;
- height: 85em;
- margin: 4em;  
-}*/
+
 
 
 /* Layout Classes */
@@ -86,12 +59,13 @@ a:hover {
 .display-inline-flex { display:inline-flex; }
 .display-inline-block { display:inline-block; }
 
-.flex-stretch { inherit; }
+.flex-stretch { flex:1 1 auto; }
 .flex-none { flex:none; }
 
 .flex-align-center { align-items:center; }
 .flex-justify-center { justify-content:center; }
 .flex-vertical { flex-direction:column; }
+
 
 
 
@@ -105,13 +79,24 @@ a:hover {
 
 
 
+
+
+
 /* PAGE ELEMENTS */
 [data-role="page"].ui-page-active {
    display:flex;
    flex-direction:column;
+   position:fixed;
+   top:0;
+   left:0;
+   width:100%;
+   height:100%;
+   overflow:hidden;
 }
 [data-role="main"] {
    flex: 1 1 100%;
+   overflow:hidden;
+   position:relative;
 }
 [data-role="footer"],
 [data-role="header"] {
@@ -119,16 +104,15 @@ a:hover {
    height: var(--header-height);
    line-height: var(--header-height);
    border-width:0;
-   background-color: var(--color-white);
+   background-color: #d97a27;
    box-shadow:0 0 5px rgba(0,0,0,0.2);
    position:relative;
    overflow:hidden;
 }
 
 .ui-header .ui-title {
-   background-color: #cb6a12;
    position:absolute;
-   top:0em;
+   top:0;
    left:0;
    width:100%;
    height:100%;
@@ -138,43 +122,9 @@ a:hover {
    padding:0;
 }
 
-<<<<<<< HEAD:robinson.tish/Login/lib/css/app.css
 
 
 
-
-=======
-  .input{
-    -webkit-writing-mode: horizontal-tb !important;
-    text-rendering: auto;
-    color: -internal-light-dark(black, white);
-    letter-spacing: normal;
-    word-spacing: normal;
-    text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
-    display: inline-block;
-    text-align: start;
-    appearance: textfield;
-    background-color: -internal-light-dark(rgb(255, 255, 255), rgb(59, 59, 59));
-    -webkit-rtl-ordering: logical;
-    cursor: text;
-    margin: 0em;
-    font: 400 13.3333px Arial;
-    padding: 1px 2px;
-    border-width: 2px;
-    border-style: inset;
-    border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
-    border-image: initial;
-  }
-
-.img{
- border-radius:50%;
- width: 250px;
- height:250px;
- align-items: center;
-}
->>>>>>> cbad08becac3fea675e5a53d5d818e04c431e508:robinson.tish/jquerymobile/app.css
 
 
 /* Navigation Elements */
@@ -213,31 +163,33 @@ a:hover {
 
 
 
+
+
 /* FORM ELEMENTS */
 .form-control {
     margin: 1em 0;
 }
 .ui-mobile .form-label {
-    margin: inherit;
+    margin: 1em 0;
     font-size: 0.7em;
     color: var(--color-neutral-medium);
 }
 .form-input {
-    width: 95%;
+    width: 100%;
     display: inline-block;
-    border: 1px solid #d83939;
-    margin: 0.5;
+    border: 1px solid var(--color-neutral-medium);
+    margin: 0;
     padding: 0.5em 1em;
-    border-radius: 2em;
+    border-radius: 0.3em;
     outline: 0;
     font:inherit;
 }
 .form-button {
     margin: 0;
     padding: 0.5em 1em;
-    border-radius: 3em;
+    border-radius: 0.3em;
     border-width:0;
-    background-color: #dc1717;
+    background-color:var(--color-neutral-light);
     outline: 0;
     width: 100%;
     display: inline-block;
@@ -247,8 +199,13 @@ a:hover {
 }
 .form-button:hover {
    text-decoration:none;
-   background-color:#f2b3b3;
+   background-color:var(--color-neutral-medium);
 }
+
+
+
+
+
 
 
 /* MODAL */
@@ -360,6 +317,10 @@ a:hover {
 
 
 
+
+
+
+
 /* ICONS */
 .icon svg,
 .icon img {
@@ -379,7 +340,7 @@ a:hover {
 }
 .title-icons .title {
   line-height:calc(var(--header-height)*(1/3));
-  font-size:1em;
+  font-size:0.7em;
 }
 
 
